// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Color Picker renders field disabled 1`] = `
<div>
  <div
    class="hide"
    data-field-name="colorPicker"
  >
    <input
      name="colorPicker"
      type="hidden"
      value="000000"
    />
    <div
      class="clay-color-picker"
    >
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="select-color"
              class="clay-color-btn dropdown-toggle btn"
              disabled=""
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="color-x-selected"
            class="form-control input-group-inset input-group-inset-before"
            disabled=""
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <input
      name="colorPicker_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="colorPicker_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Color Picker renders field with helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="colorPicker"
  >
    <input
      name="colorPicker"
      type="hidden"
      value="000000"
    />
    <div
      class="clay-color-picker"
    >
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="select-color"
              class="clay-color-btn dropdown-toggle btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="color-x-selected"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <input
      name="colorPicker_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="colorPicker_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
      <span
        class="form-help-text"
      >
        Helptext
      </span>
    </div>
    <span
      class="sr-only"
      id="colorPicker_fieldDetails"
    >
      Helptext
    </span>
  </div>
</div>
`;

exports[`Field Color Picker renders field with label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="colorPicker"
  >
    <label
      aria-labelledby="colorPicker_fieldDetails"
      class="ddm-label"
    >
      label
    </label>
    <input
      name="colorPicker"
      type="hidden"
      value="000000"
    />
    <div
      class="clay-color-picker"
    >
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="select-color"
              class="clay-color-btn dropdown-toggle btn"
              style="background: rgb(0, 0, 0);"
              title="#000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-item-focusable input-group-append"
        >
          <input
            aria-label="color-x-selected"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <input
      name="colorPicker_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="colorPicker_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
      <span
        class="form-help-text"
      >
        Helptext
      </span>
    </div>
    <span
      class="sr-only"
      id="colorPicker_fieldDetails"
    >
      label
      <br />
      Helptext
    </span>
  </div>
</div>
`;
